--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,7 +8,8 @@
 			<div class="row align-items-center">
 				<div class="col-lg-7">
 					<div class="intro-wrap">
-						<h2 class="mb-5"><span class="d-block">Let's Enjoy Your</span> Trip In <span class="typed-words"></span></h2>
+						<h1 class="mb-5"><span class="d-block">Get the job done within no time</span></h1>
+						{# <span class="typed-words"></span> #}
 
 						<div class="row">
 							<div class="col-12">
