--- a/templates/_partials/footer.html.twig
+++ b/templates/_partials/footer.html.twig
@@ -4,7 +4,7 @@
 			<div class="row">
 				<div class="col-md-6 col-lg-4">
 					<div class="widget">
-						<h3 class="heading">About Tour</h3>
+						<h3 class="heading">About {{ configuration('site', 'name') }}</h3>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 					</div>
 					<div class="widget">
@@ -60,7 +60,7 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-md-8 mb-3 mb-md-0 mx-auto">
-					<p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co" class="link-highlight">Untree.co</a> <!-- License information: https://untree.co/license/ -->Distributed By <a href="https://themewagon.com" target="_blank" >ThemeWagon</a>
+					<p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; {{ configuration('site', 'name') }}</a>
 					</p>
 				</div>
 				
