added page to choose developer or client

--- a/templates/_partials/navbar.html.twig
+++ b/templates/_partials/navbar.html.twig
@@ -31,8 +31,8 @@
                     </ul>
                 </li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="{{path ('app_login')}}">Sign in</a></li>
+                <li><a href="{{path ('register_page')}}">Register</a></li>
             </ul>
 
             <a href="#" class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light" data-toggle="collapse" data-target="#main-navbar">
