--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ app.request.locale|split('_')|first|default('fr')|lower }}">
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="author" content="{{ configuration('site', 'name') }}">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,31 +19,42 @@
         <link rel="stylesheet" href="{{asset('fonts/flaticon/font/flaticon.css')}}">
         <link rel="stylesheet" href="{{asset('fonts/icomoon/style.css')}}">
         <link rel="stylesheet" href="{{asset('css/style.css')}}">
+        {% block signupin %}
+        {% endblock %}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
     </head>
     <body>
-        {% include('_partials/navbar.html.twig') %}
-        {% block body %}{% endblock %}
-    </body>
+        {% if block('navbar') is defined %}
+            <!--=============  NAV BAR  ======================-->
+            {% include('_partials/navbar.html.twig') %}
+        {% endif %}
 
-    {% include('_partials/footer.html.twig') %}
-    {% block javascripts %}
-    {{ encore_entry_script_tags('app') }}
-    {% endblock %}
-    <script src="{{asset('js/jquery-3.4.1.min.js')}}"></script>
-    <script src="{{asset('js/popper.min.js')}}"></script>
-    <script src="{{asset('js/bootstrap.min.js')}}"></script>
-    <script src="{{asset('js/owl.carousel.min.js')}}"></script>
-    <script src="{{asset('js/jquery.animateNumber.min.js')}}"></script>
-    <script src="{{asset('js/jquery.waypoints.min.js')}}"></script>
-    <script src="{{asset('js/jquery.fancybox.min.js')}}"></script>
-    <script src="{{asset('js/aos.js')}}"></script>
-    {# <script src="{{asset('js/moment.min.js')}}"></script>
-    <script src="{{asset('js/daterangepicker.js')}}"></script> #}
-    <script src="{{asset('js/typed.js')}}"></script>
-    {% block javascriptsType %}{% endblock javascriptsType %}
-    <script src="{{asset('js/custom.js')}}"></script>
+        {% block body %}{% endblock %}
+
+        {% if block('footer') is defined %}
+            <!--================= FOOTER SECTION ==================-->
+            {% include('_partials/footer.html.twig') %}
+        {% endif %}
+        
+        
+        {% block javascripts %}
+        {{ encore_entry_script_tags('app') }}
+        {% endblock %}
+        <script src="{{asset('js/jquery-3.4.1.min.js')}}"></script>
+        <script src="{{asset('js/popper.min.js')}}"></script>
+        <script src="{{asset('js/bootstrap.min.js')}}"></script>
+        <script src="{{asset('js/owl.carousel.min.js')}}"></script>
+        <script src="{{asset('js/jquery.animateNumber.min.js')}}"></script>
+        <script src="{{asset('js/jquery.waypoints.min.js')}}"></script>
+        <script src="{{asset('js/jquery.fancybox.min.js')}}"></script>
+        <script src="{{asset('js/aos.js')}}"></script>
+        {# <script src="{{asset('js/moment.min.js')}}"></script>
+        <script src="{{asset('js/daterangepicker.js')}}"></script> #}
+        <script src="{{asset('js/typed.js')}}"></script>
+        {% block javascriptsType %}{% endblock javascriptsType %}
+        <script src="{{asset('js/custom.js')}}"></script>
+    </body>
 </html>
