--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,6 +2,9 @@
 
 {% block title %}Hello HomeController!{% endblock %}
 
+{% block navbar %}
+{% endblock %}
+
 {% block body %}
 	<div class="hero">
 		<div class="container">
@@ -414,6 +417,8 @@
 		</div>
 	</div>
 
+{% endblock %}
+{% block footer %}
 {% endblock %}
 {% block javascriptsType %}
     <script>
