--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,8 +19,8 @@
         <link rel="stylesheet" href="{{asset('fonts/flaticon/font/flaticon.css')}}">
         <link rel="stylesheet" href="{{asset('fonts/icomoon/style.css')}}">
         <link rel="stylesheet" href="{{asset('css/style.css')}}">
-        {% block signupin %}
-        {% endblock %}
+        {% block signupin %}{% endblock %}
+        {% block registerclient %}{% endblock %}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
