--- a/templates/registration/registerpage.html.twig
+++ b/templates/registration/registerpage.html.twig
@@ -11,7 +11,7 @@
         <div class="split left">
             <img class="client_img" src="{{asset('images/signinup/client.png')}}" alt="client">
             <h1></h1>
-            <a href="#" class="btn">{{'CLIENT'|trans}}</a>
+            <a href="{{path('app_register')}}" class="btn">{{'CLIENT'|trans}}</a>
         </div>
         <div class="split right">
             <img class="developer_img" src="{{asset('images/signinup/developer.jpg')}}" alt="developer">
